# wow-converter

./: Cargo.toml  README.md  mise.toml
.github/workflows/: build.yml
src/: convert.rs  lib.rs  list.rs  list_models.rs  m2.rs  m2_to_gltf.rs  main.rs  mpq.rs  server.rs  texture.rs  wmo.rs
static/: index.html
