[package]
name = "wow-gltf"
version = "0.1.0"
edition = "2024"

[lib]
name = "wow_gltf"
path = "src/lib.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"

[[bin]]
name = "list"
path = "src/list.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
wow-m2 = {path = "/Users/max/Documents/Dev/wow/warcraft-rs/file-formats/graphics/wow-m2"}
wow-wmo = {path = "/Users/max/Documents/Dev/wow/warcraft-rs/file-formats/graphics/wow-wmo"}
wow-mpq = {path = "/Users/max/Documents/Dev/wow/warcraft-rs/file-formats/archives/wow-mpq"}
wow-blp = {path = "/Users/max/Documents/Dev/wow/warcraft-rs/file-formats/graphics/wow-blp"}
image = "0.25"
gltf = {path = "/Users/max/Documents/Dev/wow/gltf"}
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
